--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/ldrs/dist/auto/lineWobble.js"
+    ></script>
   </body>
 </html>
